Fixed chat from overflowing out of its container

--- a/src/board/chat/message-container.css
+++ b/src/board/chat/message-container.css
@@ -1,6 +1,6 @@
 .chat-container {
     height: 30vw;
-    min-height: 30vw;
+    min-height: 220px;
     width: 20vw;
     position: absolute;
     bottom: 60px;
@@ -11,10 +11,10 @@
     border-radius: 10px;
     display: flex;
     z-index: 5;
+    overflow-y: hidden;
 }   
 
 .message-container {
-    border: 1px solid white;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.459);
     height: 90%;
     border-radius: 10px 10px 0 10px;
